--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         
         <link rel="stylesheet" type="text/css" href="css/main.css">
-        <title>Who's in the bag?</title>
+        <title>You still go to Blue Coat</title>
         <script>{% assign min = 0 %}{% assign max = 10000 %}{% assign diff = max | minus: min %}{% assign randomNumber = "now" | date: "%N" | modulo: diff | plus: min %}
             let version = {{randomNumber}};
             let revision =  "{{site.github.build_revision}}";
