--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <script src="https://kit.fontawesome.com/7370ae70b4.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/debounce.min.js"></script>
         <script src="js/config.js?{{site.github.build_revision}}"></script>
         <script src="js/authentication.js?{{site.github.build_revision}}"></script>
 
