--- a/css/main.css
+++ b/css/main.css
@@ -11,5 +11,5 @@
   background-image: url("/img/logo.png");
   background-position: center;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: 2.5rem;
 }
