--- a/css/main.css
+++ b/css/main.css
@@ -17,9 +17,9 @@
 
 @keyframes pulse {
   0% {
-    background-size: 1.5rem;
+    background-height: 80%
   }
   100% {
-    background-size: 2.5rem;
+    background-height: 50%
   }
 }
