--- a/css/main.css
+++ b/css/main.css
@@ -8,18 +8,19 @@
 }
 
 .image-background {
-  animation: pulse 2s infinite;
+  animation: pulse 30s infinite;
   animation-direction: alternate;
   background-image: url("/img/logo.png");
   background-position: center;
   background-repeat: no-repeat;
+  background-size: 2.5rem;
 }
 
 @keyframes pulse {
   0% {
-    background-height: 80%
+    background-height: 2.5rem;
   }
   100% {
-    background-height: 50%
+    background-height: 10rem;
   }
 }
