--- a/css/main.css
+++ b/css/main.css
@@ -22,12 +22,14 @@
 
 .lineOn {
 	fill:none;
-	stroke-width:3px
+	stroke-width:1px;
+	opacity: 0.7;
 }
 
 .lineOff {
 	fill:none;
-	stroke-width:3px
+	stroke-width:3px;
+	opacity: 0.7;
 }
 
 .lineLabel {
