--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
             content="953648658436-1bql4k0mhfaiqe8p141c4rs0sgsjbcut.apps.googleusercontent.com">
         <meta property="og:title" content="{{site.data.latest.name}} still goes to Blue Coat" />
         <meta property="og:description" content="Some things just never change." />
-        <meta property="og:image" content="https://ysgtb.bradi.sh/img/logo-home.png" />
+        <meta property="og:image" content="https://ysgtb.bradi.sh/img/download.png" />
         <script src="https://apis.google.com/js/platform.js?onload=initGoogleAuthentication" async defer></script>
         <script src="https://sdk.amazonaws.com/js/aws-sdk-2.488.0.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
