--- a/css/main.css
+++ b/css/main.css
@@ -11,12 +11,15 @@
 	font-size: 2.5rem;
 }
 
-.image-background {
-	background-image: url("/img/logo.png");
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: 2.5rem;
+.image-background::before {
+  content: "";
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background-image: url("/img/logo.png");
+  filter: hue-rotate(45deg);
 }
+
 
 
 .svgHolder {
