--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,9 @@
   top: 0; left: 0;
   width: 100%; height: 100%;
   background-image: url("/img/logo.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 2.5rem;
   filter: hue-rotate(45deg);
 }
 
