--- a/css/main.css
+++ b/css/main.css
@@ -12,18 +12,18 @@
 }
 
 .image-background::before {
-  content: "";
-  position: absolute;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  background-image: url("/img/logo.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 2.5rem;
-  filter: hue-rotate(45deg);
+    content: "";
+    position: absolute;
+    top: 5px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url(/img/logo.png);
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: 1.5rem;
+    filter: brightness(0.5) sepia(1) hue-rotate(-167deg) saturate(6);
 }
-
-
 
 .svgHolder {
 	overflow:scroll;
