--- a/css/main.css
+++ b/css/main.css
@@ -14,14 +14,14 @@
 .image-background::before {
     content: "";
     position: absolute;
-    top: 5px;
+    top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background-image: url(/img/logo.png);
-    background-position: top center;
+    background-position: center;
     background-repeat: no-repeat;
-    background-size: 1.5rem;
+    background-size: 4rem;
     filter: brightness(0.5) sepia(1) hue-rotate(-167deg) saturate(6);
 }
 
