--- a/_layouts/dummy.html
+++ b/_layouts/dummy.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>{{site.data.latest.name}} still goes to Blue Coat</title>
+        <script src="https://accounts.google.com/gsi/client" async defer></script>
     </head>
     <body>
         {{content}}
