--- a/_layouts/dummy.html
+++ b/_layouts/dummy.html
@@ -5,6 +5,9 @@
         <script src="https://accounts.google.com/gsi/client" async defer></script>
     </head>
     <body>
+        <script>
+            const goob = (x,y,z)=>console.log(x,y,z)
+        </script>
         {{content}}
     </body>
 </html>
