--- a/_layouts/dummy.html
+++ b/_layouts/dummy.html
@@ -3,7 +3,7 @@
     <head>
         <title>{{site.data.latest.name}} still goes to Blue Coat</title>
         <script>
-            const goob = function(x,y,z){return console.log(x,y,z)}
+            window.goob = goob = function(x,y,z){return console.log(x,y,z)}
         </script>
         <script src="https://accounts.google.com/gsi/client" async defer></script>
     </head>
