--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
         <meta property="og:description" content="Some things just never change. 
 {{site.data.time.date}}" />
         <meta property="og:image" content="https://ysgtb.bradi.sh/img/download.png" />
-        <script src="https://apis.google.com/js/platform.js?onload=initGoogleAuthentication" async defer></script>
+         <script src="https://accounts.google.com/gsi/client" async defer></script>
         <script src="https://sdk.amazonaws.com/js/aws-sdk-2.488.0.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
