--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
              data-client_id="953648658436-1bql4k0mhfaiqe8p141c4rs0sgsjbcut.apps.googleusercontent.com"
              data-context="signin"
              data-ux_mode="popup"
-             data-callback="handleAuthentication"
+             data-callback="authenticationCallback"
              data-auto_select="true"
              data-close_on_tap_outside="false">
         </div>
