--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,21 +27,14 @@
         </script>
     </head>
     <body>
-        <div id="g_id_onload"
+        <!--<div id="g_id_onload"
              data-client_id="953648658436-1bql4k0mhfaiqe8p141c4rs0sgsjbcut.apps.googleusercontent.com"
              data-context="signin"
              data-ux_mode="popup"
              data-callback="authenticationCallback"
              data-auto_select="true"
              data-close_on_tap_outside="false">
-        </div>
-        <div class="g_id_signin"
-             data-type="icon"
-             data-shape="circle"
-             data-theme="outline"
-             data-text="signin_with"
-             data-size="small">
-        </div>
+        </div>-->
         {{content}}
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
