--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 {{site.data.time.date}}" />
         <meta property="og:image" content="https://ysgtb.bradi.sh/img/download.png" />
 
-        <script src="https://accounts.google.com/gsi/client" async defer></script>
+        <script src="https://accounts.google.com/gsi/client"></script>
         <script src="https://sdk.amazonaws.com/js/aws-sdk-2.488.0.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
@@ -20,7 +20,7 @@
         <script src="https://d3js.org/d3.v5.min.js"></script>
         
         <script src="js/config.js?{{site.github.build_revision}}"></script>
-        <script src="js/authentication.js?{{site.github.build_revision}}" async defer></script>
+        <script src="js/authentication.js?{{site.github.build_revision}}"></script>
         
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="css/main.css?{{site.github.build_revision}}">
@@ -30,14 +30,6 @@
         </script>
     </head>
     <body>
-        <!--<div id="g_id_onload"
-             data-client_id="953648658436-1bql4k0mhfaiqe8p141c4rs0sgsjbcut.apps.googleusercontent.com"
-             data-context="signin"
-             data-ux_mode="popup"
-             data-callback="authenticationCallback"
-             data-auto_select="true"
-             data-close_on_tap_outside="false">
-        </div>-->
         {{content}}
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
